# ShareYourCloning_LinkML

./: .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  about.yaml  config.env  get_test_data.py  index.html  issue.md  make_pydantic_model.sh  make_yuml.sh  mkdocs.yml  original_json_schema.json  pydantic_model.py  pyproject.toml  sitemap.xml  validate.sh  yuml.txt
AddGeneIdSource/: index.html
AddGeneSequenceType/: index.html
AnnotationReport/: index.html
AnnotationSource/: index.html
AnnotationTool/: index.html
AssemblyFragment/: index.html
AssemblyJoin/: index.html
AssemblyJoinComponent/: index.html
AssemblySource/: index.html
AssociatedFile/: index.html
AssociatedFileType/: index.html
BenchlingUrlSource/: index.html
Boolean/: index.html
CRISPRSource/: index.html
CloningStrategy/: index.html
Collection/: index.html
CollectionOption/: index.html
CollectionOptionInfo/: index.html
CollectionOptionType/: index.html
CollectionSource/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Description/: index.html
Double/: index.html
EuroscarfSource/: index.html
Feature/: index.html
Float/: index.html
GatewayReactionType/: index.html
GatewaySource/: index.html
GenomeCoordinatesSource/: index.html
GibsonAssemblySource/: index.html
HomologousRecombinationSource/: index.html
IGEMSource/: index.html
InFusionSource/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
LigationSource/: index.html
ManuallyTypedSource/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
OligoHybridizationSource/: index.html
OpenCloning_LinkML/: index.html
OverlapExtensionPCRLigationSource/: index.html
PCRSource/: index.html
PlannotateAnnotationReport/: index.html
PolymeraseExtensionSource/: index.html
Primer/: index.html
RepositoryIdSource/: index.html
RepositoryName/: index.html
RestrictionAndLigationSource/: index.html
RestrictionEnzymeDigestionSource/: index.html
RestrictionSequenceCut/: index.html
ReverseComplementSource/: index.html
SEVASource/: index.html
Sequence/: index.html
SequenceCut/: index.html
SequenceCutSource/: index.html
SequenceFileFormat/: index.html
SequencingFile/: index.html
ShareYourCloning_LinkML/: index.html
SimpleSequenceLocation/: index.html
SnapGenePlasmidSource/: index.html
Source/: index.html
Sparqlpath/: index.html
String/: index.html
TemplateSequence/: index.html
TextFileSequence/: index.html
Time/: index.html
Type/: index.html
UploadedFileSource/: index.html
Uri/: index.html
Uriorcurie/: index.html
WekWikGeneIdSource/: index.html
about/: index.html
add_primer_features/: index.html
addgene_sequence_type/: index.html
alignment/: index.html
annotation_report/: index.html
annotation_tool/: index.html
annotation_tool_version/: index.html
assembly/: index.html
assembly_accession/: index.html
category_id/: index.html
circular/: index.html
circularize/: index.html
cut_watson/: index.html
database/: index.html
description/: index.html
end/: index.html
end_location/: index.html
examples/: README.md
file_content/: index.html
file_name/: index.html
file_type/: index.html
files/: index.html
forward_oligo/: index.html
forward_primer/: index.html
fragment/: index.html
full_length_of_feature_in_db/: index.html
gene_id/: index.html
greedy/: index.html
guides/: index.html
id/: index.html
image/: index.html
index_in_file/: index.html
info/: index.html
input/: index.html
left/: index.html
left_edge/: index.html
left_location/: index.html
length_of_found_feature/: index.html
location/: index.html
(+129 files in other folders)
