[tool.poetry]
authors = ["Manuel Lera-Ramirez <manuel.lera-ramirez@ucl.ac.uk>"]
description = "A LinkML data model for ShareYourCloning"
include = ["README.md", "src/shareyourcloning_linkml/schema", "project"]
license = "MIT"
name = "shareyourcloning-linkml"
readme = "README.md"
version = "0.1.0"

homepage = "https://github.com/genestorian/ShareYourCloning_LinkML"
repository = "https://github.com/genestorian/ShareYourCloning_LinkML"
documentation = "https://genestorian.github.io/ShareYourCloning_LinkML"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
linkml-runtime = "^1.1.24"
python = "^3.9"
rdflib = "6"
linkml = "^1.7.8"
pydna = "^5.2.0"
twine = "^5.0.0"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[tool.poetry.dev-dependencies]
linkml = "^1.3.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
