[tool.poetry]
authors = ["Manuel Lera-Ramirez <manuel.lera-ramirez@ucl.ac.uk>"]
description = "A LinkML data model for OpenCloning"
include = ["README.md", "src/opencloning_linkml/schema", "project"]
license = "MIT"
name = "opencloning-linkml"
readme = "README.md"
version = "0.1.0"
package-mode = true

homepage = "https://github.com/genestorian/OpenCloning_LinkML"
repository = "https://github.com/genestorian/OpenCloning_LinkML"
documentation = "https://genestorian.github.io/OpenCloning_LinkML"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.7.1"

[tool.poetry-dynamic-versioning]
enable = true
style = "pep440"
vcs = "git"

[tool.poetry.group.dev.dependencies]
linkml = "^1.7.8"
linkml-runtime = "^1.7.5"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"
schemasheets = "^0.1.14"
autopep8 = "^2.1.0"
flake8-bugbear = "^24.4.21"
black = "24.2.0"
pre-commit = "^3.7.0"

pygithub = "^2.5.0"
[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]

[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]

[tool.black]
line-length = 119
